added auth controller

--- a/package.json
+++ b/package.json
@@ -59,14 +59,15 @@
     "express": "^4.17.1",
     "express-winston": "^4.0.2",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mysql2": "^2.1.0",
     "nodemon": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "strong-params": "^1.0.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.8.3",
     "typeorm": "^0.2.22",
-    "mysql2": "^2.1.0",
+    "typescript": "^3.8.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
